src/test/deca/context/invalid/class/method_error_pere_fils.deca
// Description:
//    Test ou on utulise le meme nom d'un field pour une methode
//
//                                          (Rule 2.5)
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//    Context: erreur puisqu'on peut pas utuliser le meme nom d'un field pour une metode dans la meme classe
//
// Historique:
//    cree le 22/01/2022


    class A{
       int Resultat ;

        int Plus(int x, int y ){
            return x + y ;
        }

    }

    class B extends A{
        int miniResultat ;

        int Plus(int x){
            return x + x ;
        }
    }

{

}